feat: 完成 macOS 迁移和功能修复
🎉 主要改进:
- ✅ 完全兼容 Java 8 (修复所有 Java 11+ 特性)
- ✅ 修复任务执行次数显示问题 (executionCount)
- ✅ 修复日志功能 (logFilePath 和日志查看)
- ✅ 完整的 macOS 脚本支持

🔧 技术修复:
- Agent: 添加 ackTask 调用，正确更新任务状态
- Agent: 替换 Java 11 HttpClient 为 Apache HttpClient
- Agent: 添加 commons-logging 依赖
- Server: 修复所有 Java 8 兼容性问题
- 日志: 完整的日志文件生成和 API 支持

📁 新增文件:
- macOS 启动脚本 (scripts/mac/)
- macOS 安装和使用指南
- 完整的项目文档

🧪 测试验证:
- ✅ Server 启动正常 (Java 1.8.0_472)
- ✅ Agent 注册和心跳正常
- ✅ 任务执行和日志记录正常
- ✅ Web 界面功能正常

📊 系统状态:
- 在线 Agent: 1 个
- 成功任务: 多个测试任务
- 日志目录: logs/tasks/YYYY/MM/
- 所有核心功能正常运行